Revert not persisting GitHub credentials in workflow job for pushing a Git tag after release
This was broken in b3f50b04e2d708c9eb7a72a0937629e9f6305faa.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -676,7 +676,7 @@ jobs:
       uses: actions/checkout@v5
       with:
         show-progress: false
-        persist-credentials: false
+        persist-credentials: true
         fetch-depth: 1
         ref: ${{ github.event.inputs.release-commitish }}
     - name: Setup git user as [bot]
